--- a/privacy.html
+++ b/privacy.html
@@ -3,93 +3,179 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Privacy Policy | TaskHub</title>
-  <meta name="description" content="TaskHub Privacy Policy — learn how we collect, use, and protect your information.">
+  <title>Privacy Policy | Bita Digital Hub</title>
+  <meta name="description" content="Learn how Bita Digital Hub collects, uses, and protects your data. We value your privacy and ensure a secure, ad-supported experience.">
+  <meta name="keywords" content="Bita Digital Hub privacy policy, data protection, cookies, Google Analytics, AdSense, Vancouver, online tools">
   <link rel="stylesheet" href="./css/style.css" />
+  <link rel="icon" type="image/png" href="./assets/taskhub-logo.png" />
+
+  <!-- 📈 Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YHKWTPXDHC"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-YHKWTPXDHC');
+  </script>
+
+  <!-- 💰 Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3215014361489762"
+     crossorigin="anonymous"></script>
+
+  <!-- 🧭 Open Graph -->
+  <meta property="og:title" content="Privacy Policy | Bita Digital Hub">
+  <meta property="og:description" content="We protect your privacy. Learn how we use data responsibly at Bita Digital Hub.">
+  <meta property="og:image" content="https://bitadigitalhub.com/assets/taskhub-logo.png">
+  <meta property="og:url" content="https://bitadigitalhub.com/privacy.html">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <style>
+    main {
+      max-width: 900px;
+      margin: 3rem auto;
+      padding: 2rem;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      line-height: 1.8;
+      color: #333;
+    }
+    h1 {
+      font-size: 1.8rem;
+      margin-bottom: 0.5rem;
+      color: var(--primary, #0078d7);
+    }
+    h2 {
+      font-size: 1.3rem;
+      margin-top: 1.5rem;
+      color: #222;
+    }
+    ul { padding-left: 1.2rem; }
+    li { margin-bottom: 0.4rem; }
+    section[dir="rtl"] {
+      margin-top: 3rem;
+      padding-top: 2rem;
+      border-top: 2px dashed #eee;
+      font-family: "Vazirmatn", sans-serif;
+      line-height: 1.9;
+    }
+    section[dir="rtl"] h1, section[dir="rtl"] h2 {
+      text-align: right;
+      color: #0078d7;
+    }
+    section[dir="rtl"] p, section[dir="rtl"] li {
+      text-align: right;
+    }
+  </style>
 </head>
 
 <body>
-  <!-- 🔝 Navigation -->
+  <!-- 🧭 Navbar -->
   <header class="navbar">
-    <a href="index.html" class="brand">⚙️ TaskHub</a>
+    <div class="nav-left">
+      <img src="./assets/taskhub-logo.svg" alt="TaskHub Logo" class="nav-logo" width="36" height="36" />
+      <a href="index.html" class="brand">Bita Digital Hub</a>
+    </div>
     <nav>
       <a href="index.html">Home</a>
+      <a href="about.html">About</a>
       <a href="#">Privacy</a>
-      <a href="mailto:contact@bitadigitalhub.com">contact@bitadigitalhub.com</a> 
+      <a href="mailto:contact@bitadigitalhub.com">Contact</a>
     </nav>
   </header>
 
-  <!-- 🧾 Main Section -->
-  <main style="max-width:900px;margin:2rem auto;padding:1rem;background:#fff;border-radius:10px;box-shadow:0 2px 8px rgba(0,0,0,0.05);">
-    <h1>Privacy Policy</h1>
-    <p>Last updated: October 2025</p>
+  <!-- 🌐 Language Switch -->
+  <div style="text-align:center;margin:1.2rem 0;">
+    <button onclick="window.location.href='./privacy.html'" style="padding:0.5rem 1rem;border:1px solid #ddd;border-radius:6px;cursor:pointer;background:#fff;">English</button>
+    <button onclick="window.location.href='./fa/privacy-fa.html'" style="padding:0.5rem 1rem;border:1px solid #ddd;border-radius:6px;cursor:pointer;background:#fff;">فارسی</button>
+  </div>
 
-    <p>Welcome to <strong>TaskHub</strong>. Your privacy is important to us. This page explains what information we collect, how we use it, and how we protect it.</p>
+  <!-- 🧾 Main Section -->
+  <main>
+    <h1>Privacy Policy</h1>
+    <p><em>Last updated: October 2025</em></p>
+
+    <p>Welcome to <strong>Bita Digital Hub</strong>. Your privacy is important to us. This page explains what information we collect, how we use it, and how we protect it.</p>
 
     <h2>1. Information We Collect</h2>
     <ul>
-      <li>We do not store uploaded files permanently. All file conversions and operations happen in your browser (client-side).</li>
-      <li>We may collect non-personal data such as browser type, device, and anonymized usage statistics for improving our tools.</li>
+      <li>We do not store uploaded files permanently. All file operations occur securely in your browser (client-side).</li>
+      <li>We may collect non-personal data such as device type, browser version, and anonymized analytics for performance improvements.</li>
     </ul>
 
     <h2>2. How We Use Information</h2>
     <ul>
-      <li>To improve user experience and site performance.</li>
-      <li>To display relevant ads through Google AdSense.</li>
+      <li>To improve user experience and optimize tool performance.</li>
+      <li>To display relevant ads via Google AdSense and gather usage insights through Google Analytics.</li>
     </ul>
 
     <h2>3. Cookies</h2>
-    <p>We may use cookies for analytics and advertising. You can disable cookies in your browser settings if you prefer not to be tracked.</p>
+    <p>We may use cookies for analytics and advertising. You can disable cookies anytime in your browser settings.</p>
 
     <h2>4. Third-Party Services</h2>
-    <p>Our website uses Google AdSense and Google Analytics, which may collect anonymized traffic data and display personalized ads.</p>
+    <p>This site uses Google AdSense and Google Analytics, which may collect anonymized traffic data to show personalized ads and measure site engagement.</p>
 
     <h2>5. Data Security</h2>
-    <p>Your files and information remain private. We never share or sell user data.</p>
+    <p>Your data and uploaded files are never stored on our servers. We never share or sell any user data to third parties.</p>
 
     <h2>6. Contact</h2>
-    <p>If you have any questions about this Privacy Policy, please contact us at:
-     <a href="mailto:contact@bitadigitalhub.com">contact@bitadigitalhub.com</a> </p>
+    <p>If you have any questions about this Privacy Policy, please reach out at
+      <a href="mailto:contact@bitadigitalhub.com">contact@bitadigitalhub.com</a>.
+    </p>
 
     <hr style="margin:3rem 0;">
 
     <!-- 🌍 Farsi Version -->
     <section dir="rtl">
       <h1>سیاست حفظ حریم خصوصی</h1>
-      <p>آخرین بروزرسانی: اکتبر ۲۰۲۵</p>
-      <p>به <strong>TaskHub</strong> خوش آمدید. حفظ حریم خصوصی شما برای ما مهم است. در این صفحه توضیح داده شده است که چه اطلاعاتی جمع‌آوری می‌شود و چگونه از آن‌ها استفاده می‌کنیم.</p>
+      <p><em>آخرین بروزرسانی: اکتبر ۲۰۲۵</em></p>
+      <p>به <strong>Bita Digital Hub</strong> خوش آمدید. حفظ حریم خصوصی شما برای ما مهم است. در این صفحه توضیح داده شده که چه اطلاعاتی جمع‌آوری می‌شود و چگونه از آن‌ها استفاده می‌کنیم.</p>
 
       <h2>۱. اطلاعاتی که جمع‌آوری می‌کنیم</h2>
       <ul>
-        <li>فایل‌هایی که بارگذاری می‌کنید به‌صورت دائمی ذخیره نمی‌شوند. تمام عملیات در مرورگر شما انجام می‌شود.</li>
-        <li>ممکن است داده‌های غیرشخصی مانند نوع مرورگر، دستگاه، و آمار کلی استفاده جمع‌آوری شود تا کیفیت خدمات بهبود یابد.</li>
+        <li>فایل‌های شما به‌صورت دائمی ذخیره نمی‌شوند. تمام پردازش‌ها در مرورگر شما انجام می‌شوند.</li>
+        <li>ممکن است داده‌های غیرشخصی مانند نوع مرورگر و آمار کلی استفاده برای بهبود خدمات جمع‌آوری شود.</li>
       </ul>
 
       <h2>۲. نحوه استفاده از اطلاعات</h2>
       <ul>
-        <li>برای بهبود تجربه کاربر و عملکرد وب‌سایت.</li>
+        <li>برای بهبود تجربه کاربر و عملکرد سایت.</li>
         <li>برای نمایش تبلیغات مرتبط از طریق Google AdSense.</li>
       </ul>
 
       <h2>۳. کوکی‌ها</h2>
-      <p>ممکن است از کوکی‌ها برای تحلیل بازدید و تبلیغات استفاده کنیم. شما می‌توانید کوکی‌ها را از تنظیمات مرورگر خود غیرفعال کنید.</p>
+      <p>ممکن است از کوکی‌ها برای تحلیل بازدید و تبلیغات استفاده شود. شما می‌توانید کوکی‌ها را از تنظیمات مرورگر خود غیرفعال کنید.</p>
 
       <h2>۴. خدمات شخص ثالث</h2>
-      <p>وب‌سایت ما از Google AdSense و Google Analytics استفاده می‌کند که ممکن است داده‌های ناشناس ترافیک را جمع‌آوری و تبلیغات شخصی‌سازی‌شده نمایش دهند.</p>
+      <p>وب‌سایت ما از Google AdSense و Google Analytics استفاده می‌کند که داده‌های ناشناس ترافیک را برای تبلیغات و تحلیل جمع‌آوری می‌کنند.</p>
 
       <h2>۵. امنیت داده‌ها</h2>
-      <p>اطلاعات و فایل‌های شما خصوصی باقی می‌مانند. ما هرگز داده‌های کاربران را به اشتراک نمی‌گذاریم یا نمی‌فروشیم.</p>
+      <p>اطلاعات شما خصوصی باقی می‌مانند. ما هیچ داده‌ای را به اشتراک نمی‌گذاریم یا نمی‌فروشیم.</p>
 
       <h2>۶. تماس با ما</h2>
       <p>در صورت وجود هرگونه سؤال درباره این سیاست، با ما تماس بگیرید:
-      <a href="mailto:contact@bitadigitalhub.com">contact@bitadigitalhub.com</a></p>
+        <a href="mailto:contact@bitadigitalhub.com">contact@bitadigitalhub.com</a>
+      </p>
     </section>
   </main>
 
-  <!-- 🧾 Footer -->
+  <!-- 📢 AdSense -->
+  <div style="text-align:center;margin:2rem auto;">
+    <ins class="adsbygoogle"
+         style="display:block; text-align:center;"
+         data-ad-client="ca-pub-3215014361489762"
+         data-ad-slot="6666666666"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+  </div>
+
+  <!-- 🧭 Footer -->
   <footer>
-    <p>© 2025 TaskHub | Built for simplicity & trust.</p>
-    <p><a href="#">Privacy Policy</a> · <a href="#">Terms </a></p>
+    <p>
+      © 2025 <strong>Bita Digital Hub</strong> | Built for simplicity & trust.<br>
+      <a href="privacy.html">Privacy Policy</a> · <a href="about.html">About</a>
+    </p>
   </footer>
 </body>
 </html>
