--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <a href="./index.html" class="active">Home</a>
       <a href="./about.html">About</a>
       <a href="./privacy.html">Privacy</a>
-      <a href="mailto:contact@bitadigitalhub.com">contact@bitadigitalhub.com</a>
+      <a href="mailto:contact@bitadigitalhub.com">📩 contact@bitadigitalhub.com</a>
     </nav>
   </header>
 
