--- a/tools/social-audit-fa.html
+++ b/tools/social-audit-fa.html
@@ -69,7 +69,7 @@
   <header class="navbar">
     <div class="nav-left">
       <img src="../assets/taskhub-logo.svg" alt="TaskHub Logo" class="nav-logo" width="32" height="32"/>
-      <a href="../index.html" class="brand">TaskHub</a>
+      <a href="../index.html" class="brand">Bita Digital Hub</a>
     </div>
     <nav>
       <a href="../index.html">خانه</a>
