--- a/tools/url-shortener.html
+++ b/tools/url-shortener.html
@@ -36,7 +36,7 @@
   <header class="navbar">
     <div class="nav-left">
       <img src="../assets/taskhub-logo.svg" alt="Bita Digital Hub Logo" class="nav-logo" width="32" height="32" />
-      <a href="../index.html" class="brand">TaskHub</a>
+      <a href="../index.html" class="brand">Bita Digital Hub</a>
     </div>
     <nav>
       <a href="../index.html">Home</a>
