added farsi part

--- a/tools/social-audit-fa.html
+++ b/tools/social-audit-fa.html
@@ -75,7 +75,8 @@
       <a href="../index.html">خانه</a>
       <a href="../about.html">درباره ما</a>
       <a href="../privacy.html">حریم خصوصی</a>
-      <a href="mailto:contact@bitadigitalhub.com">تماس با ما</a>
+      <a href="mailto:contact@bitadigitalhub.com">تماس با ما 📩</a>
+    
     </nav>
   </header>
 
