--- a/tools/url-shortener.html
+++ b/tools/url-shortener.html
@@ -42,7 +42,7 @@
       <a href="../index.html">Home</a>
       <a href="../about.html">About</a>
       <a href="../privacy.html">Privacy</a>
-      <a href="mailto:contact@bitadigitalhub.com">contact@bitadigitalhub.com</a>
+      <a href="mailto:contact@bitadigitalhub.com">📩 contact@bitadigitalhub.com</a>
     </nav>
   </header>
 
