--- a/about-fa.html
+++ b/about-fa.html
@@ -103,32 +103,31 @@
 
   <!-- 🧠 About Section -->
   <section class="about-section">
-    <h1>About Bita Digital Hub</h1>
-    <p><strong>Bita Digital Hub</strong> is a free collection of smart, practical, and time-saving tools built for creators, students, and digital professionals.
-      Our goal is simple — to make your everyday online tasks easier, faster, and more reliable — all in one place.</p>
+    <h1>درباره Bita Digital Hub</h1>
+    <p><strong>Bita Digital Hub</strong> یک مجموعه ابزار آنلاین و رایگان است که برای ساده‌تر کردن کارهای روزمره دیجیتال ساخته شده؛ مخصوصاً برای کسانی که در تولید محتوا، آموزش، بازاریابی دیجیتال یا کارهای دیتایی فعال‌اند.</p>
 
-    <h2>🌍 What We Offer</h2>
-    <p>Bita Digital Hub combines essential digital utilities into a single clean platform:</p>
+    <h2>📦 چه چیزهایی اینجاست؟</h2>
+    <p>در این سایت چند ابزار کاربردی را در یک جا جمع کردیم تا لازم نباشد برای هر کار کوچکی یک سایت جدا باز کنید:</p>
     <ul>
-      <li>📁 <strong>File Converter</strong> — Convert between PDF, Word, Excel, and image formats easily.</li>
-      <li>📦 <strong>ZIP & Unzip</strong> — Compress or extract files online with one click.</li>
-      <li>📊 <strong>CSV & Excel Cleaner</strong> — Merge, clean, and format spreadsheet data fast.</li>
-      <li>🔐 <strong>Password Generator</strong> — Create strong, unique passwords instantly.</li>
-      <li>🌐 <strong>URL Shortener & QR Generator</strong> — Share professional, trackable links.</li>
-      <li>💬 <strong>Social Media Audit</strong> — Analyze your post engagement and caption quality.</li>
+      <li>📁 <strong>تبدیل فایل (File Converter)</strong> — تبدیل بین PDF، ورد، اکسل، تصویر و متن</li>
+      <li>📦 <strong>فشرده‌سازی و استخراج (ZIP / Unzip)</strong> — زیپ و آن‌زیپ فایل داخل مرورگر</li>
+      <li>📊 <strong>پاکسازی و ترکیب CSV/Excel</strong> — تمیز کردن، ادغام و حذف داده‌های تکراری</li>
+      <li>🔐 <strong>ساخت رمز عبور</strong> — ساخت پسورد قوی و بررسی امنیت آن</li>
+      <li>🌐 <strong>کوتاه‌کننده لینک و QR</strong> — ساخت لینک کوتاه و QR برای اشتراک سریع</li>
+      <li>📱 <strong>ابزار ارزیابی سوشال‌مدیا</strong> — مخصوص کسانی که اینستاگرام و شبکه‌های اجتماعی را حرفه‌ای کار می‌کنند</li>
     </ul>
 
-    <h2>🎯 Our Mission</h2>
-    <p>We believe technology should be simple and accessible.  
-    Bita Digital Hub was built with the mission to give everyone — from data engineers and marketers to students — access to reliable digital tools without cost or complexity.</p>
+    <h2>🎯 هدف ما</h2>
+    <p>هدف از ساخت این هاب این بود که: «چرا برای کارهای کوچک باید ده تا سایت مختلف باز کنیم؟»  
+    پس این ابزارها طوری نوشته شده‌اند که سبک، سریع، بدون لاگین و تا حد امکان سمت مرورگر (client-side) باشند تا حریم خصوصی شما حفظ شود.</p>
 
-    <h2>🤝 Who We Are</h2>
-    <p>Bita Digital Hub was created by <strong>Bita Ashoori</strong>, a Vancouver-based Data Engineer and digital creator passionate about building useful tools that empower people to work smarter online.  
-    What started as a small set of utilities for data and file handling has grown into a full online productivity hub serving users worldwide.</p>
+    <h2>👩‍💻 چه کسی این را ساخته؟</h2>
+    <p>این پروژه را <strong>بیتا عاشوری</strong> ساخته؛ دیتا اینجینیر مستقر در ونکوور، که هم با دیتا و ابزارهای ابری کار می‌کند و هم عاشق ساختن ابزارهای کوچک و کاربردی برای بقیه است.  
+    TaskHub / Bita Digital Hub اولش یک صفحه آزمایشی بود، ولی کم‌کم تبدیل شد به یک مجموعه ابزار که می‌شود بعداً هم گسترشش داد.</p>
 
-    <h2>💌 Get in Touch</h2>
-    <p>We love feedback, collaboration, and new ideas!  
-    Email us anytime at <a href="mailto:contact@bitadigitalhub.com">contact@bitadigitalhub.com</a>.</p>
+    <h2>📬 چطور با ما در تماس باشید؟</h2>
+    <p>اگر ابزار جدید می‌خواهید، باگی دیدید یا می‌خواهید برای دوره/افیلیت یک ابزار مخصوص بسازیم، ایمیل بزنید:</p>
+    <p><a href="mailto:contact@bitadigitalhub.com">contact@bitadigitalhub.com</a></p>
   </section>
 
   <!-- 🧱 AdSense Placement -->
@@ -145,8 +144,8 @@
   <!-- 🧭 Footer -->
   <footer>
     <p>
-      <a href="./privacy.html">Privacy Policy</a> |
-      © 2025 <strong>Bita Digital Hub</strong> — Fast, Simple, Free Tools
+      <a href="../privacy.html">سیاست حریم خصوصی</a> |
+      © ۲۰۲۵ <strong>Bita Digital Hub</strong> — ابزارهای سریع، ساده و رایگان
     </p>
   </footer>
 </body>
