added farsi part5

--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
   <!-- 🌍 Language Switch -->
   <div class="lang-switch">
     <button onclick="window.location.href='./about.html'">English</button>
-    <button onclick="window.location.href='./fa/about-fa.html'">فارسی</button>
+    <button onclick="window.location.href='./about-fa.html'">فارسی</button>
   </div>
 
   <!-- 🧠 About Section -->
