--- a/about-fa.html
+++ b/about-fa.html
@@ -86,18 +86,18 @@
 </head>
 
 <body>
+  
   <!-- 🧭 Navbar -->
   <header class="navbar">
     <div class="nav-left">
-      <img src="../assets/taskhub-logo.svg" alt="Bita Digital Hub" class="nav-logo" width="36" height="36">
-      <a href="../index.html" class="brand">Bita Digital Hub</a>
+      <img src="./assets/taskhub-logo.svg" alt="TaskHub Logo" class="nav-logo" width="36" height="36">
+      <a href="./index.html" class="brand">Bita Digital Hub</a>
     </div>
     <nav>
-      <a href="../index.html">خانه</a>
-      <a href="about.html">درباره</a>
-      <a href="../privacy.html">حریم خصوصی</a>
-      <a href="mailto:contact@bitadigitalhub.com">تماس 📩</a>
-      
+      <a href="./index.html" class="active">Home</a>
+      <a href="./about.html">About</a>
+      <a href="./privacy.html">Privacy</a>
+      <a href="mailto:contact@bitadigitalhub.com">📩 contact@bitadigitalhub.com</a>
     </nav>
   </header>
 
