added new ver index added farsi

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
   <!-- Hero -->
   <section class="hero">
     <div class="hero-content">
-      <h1>All your Essential Tools in one place ⚙️</h1>
-      <p>Convert files, compress data, clean spreadsheets, and more — instantly, securely, and for free.</p>
+      <h1>⚙️ All your Essential Tools in one place </h1>
+      <p>Convert files, compress data, clean spreadsheets, and more - instantly, securely, and free.</p>
 
       <div class="typing-tagline">
         <span id="typing-text"></span><span class="cursor">|</span>
@@ -210,7 +210,7 @@
       const heroDesc = document.querySelector('.hero-content p');
 
       if (lang === 'fa') {
-        heroTitle.textContent = 'همه ابزارهای ضروری شما در یک جا ⚙️';
+        heroTitle.textContent = ' ⚙️همه ابزارهای ضروری شما در یک جا';
         heroDesc.textContent = 'فایل‌ها را تبدیل کنید، داده‌ها را فشرده کنید، جدول‌ها را تمیز کنید و خیلی کارهای دیگر — فوری، امن و رایگان.';
       } else {
         heroTitle.textContent = 'All your Essential Tools in one place ⚙️';
